--- a/frontend/frontend/src/components/ContactForm/ContactForm.css
+++ b/frontend/frontend/src/components/ContactForm/ContactForm.css
@@ -1,19 +1,17 @@
 .form-container {
-    /* display: flex;
-    flex-direction: row; */
-    /* align-items: flex-start; */
+
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* margin: auto 2em auto auto; */
+
     background-color: var(--bc-lightBlue);
     padding: min(10vh, 10rem) min(5vw, 5rem);
-    /* gap: min(20rem, 20vw); */
-    /* border: 3px solid red; */
+
 
 }
 
 .contact-text {
     text-align: center;
+    align-self: center;
     
 
     color: white;
@@ -29,7 +27,7 @@
 }
 
 .contact-description {
-
+    font-size: clamp(var(--fs-eighteen), 1.125vw, var(--fs-twentyFour));
     font-weight: 500;
     line-height: 1.5rem;
     display: inline-block;
@@ -42,7 +40,7 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-    border: 10px solid red;
+    /* border: 10px solid red; */
     width: 80%;
     /* min-width: 80%; */
     min-height: 100%;
@@ -56,8 +54,7 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    /* width: 90%; */
-    /* padding: min(1.2vh, 1.2rem) min(0.5vw, 0.5rem) min(1vh, 1rem) min(0.5vh, 0.5rem); */
+    border: 10px solid red;
     padding: min(15vh, 15rem) min(5vw, 5rem);
     box-shadow: 0 .5rem 0 0 rgba(0, 0, 0 0.14688);
     border-radius: .625rem;
