--- a/frontend/frontend/src/components/Services/components/WritingServices.css
+++ b/frontend/frontend/src/components/Services/components/WritingServices.css
@@ -1,16 +1,8 @@
-/* --bc-darkerBlue: #1b2d48;
-  --bc-darkBlue: #2c456b;
-  --bc-middleBlue: #3c649f;
-  --bc-lightBlue: #4779c4;
-  --bc-lighterBlue: #83aff0;
-  --bc-lightRed: rgba(252, 61, 61, 0.911); */
+
 
 
 
 .writing-services {
-    /* padding: min(5vh, 5rem) min(10vw, 10rem); */
-    /* padding: min(15vh, 15rem) min(20vw, 20rem); */
-    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     font-family: "Roboto", serif;
     display: flex;
     flex-direction: column;
@@ -22,7 +14,7 @@
 
 .writing-services > h3 {
     font-size: var(--fs-fortyEight);
-    color: black;
+    color: var(--bc-lightBlue);
     text-align: center;
     padding: .25em .5em;
     margin: 0 auto 0 auto;
@@ -42,9 +34,6 @@
     display: flex;
     justify-content: center;
     width: 50%;
-   
-    
-    
 }
 
 .resume-services-img > img {
@@ -145,9 +134,6 @@
 }
 
 .biography-services-img > img {
-    /* background-image: url(../assets/resume.jpg); */
-    /* background-position-x: center; */
-    /* background-size: contain; */
     display: block;
     width: 100%;
     height: 45rem;
