--- a/frontend/frontend/src/components/TestimonialsCarousel/TestimonialsCarousel.css
+++ b/frontend/frontend/src/components/TestimonialsCarousel/TestimonialsCarousel.css
@@ -1,24 +1,20 @@
-:root {
-    --clr-neutral-700: 240, 38%, 20%;
-}
-
 
 
 .carousel {
     min-width: 100%;
-    /* min-height: 100%; */
+
     position: relative;
     min-height: 20rem;
 
     
     padding: min(5vh, 5rem) min(5vw, 5rem);
     background-color: var(--bc-lightBlue);
-    /* border: 1px solid black; */
+
 
 }
 
 .carousel-item {
-    /* border: 1px solid yellow; */
+
     display: grid;
     grid-template-columns: 1fr;
 
@@ -29,7 +25,7 @@
 }
 
 
-/* SWITCH TO GRID? */
+
 .carousel-slide {
  
     max-width: 85%;
